[package]
name = "rhea"
version = "2.0.2"
edition = "2021"
license = "MIT"
authors = ["Eugene Chou <euchou@ucsc.edu>"]
description = "A QEMU-based virtual machine manager."
repository = "https://github.com/euugenechou/rhea"
readme = "README.md"

[dependencies]
anyhow = "1.0.68"
array-init = "2.1.0"
clap = { version = "4.1.3", features = ["derive"] }
fslock = "0.2.1"
path_macro = "1.0.0"
piper = { version = "0.1.0", git = "https://github.com/euugenechou/piper" }
serde = { version = "1.0.152", features = ["derive"] }
tabled = "0.11.1"
thiserror = "1.0.38"
toml = "0.5.11"
